# clear-msig-ika

./: Cargo.toml  Quasar.toml  README.md
cli/: Cargo.toml
cli/src/: accounts.rs  config.rs  ika.rs  instructions.rs  main.rs  message.rs  params.rs  signing.rs
cli/src/chains/: mod.rs
cli/src/commands/: intent.rs  proposal.rs  wallet.rs
cli/src/quasar_client/: bind_dwallet.rs  create_wallet.rs  ika_sign.rs  propose.rs
e2e/: Cargo.toml
e2e/src/: main.rs
e2e/src/quasar_client/: bind_dwallet.rs  create_wallet.rs  ika_sign.rs
examples/intents/: evm_transfer.json  zec_transfer.json
programs/clear-wallet/: Cargo.toml  Quasar.toml
programs/clear-wallet/client/: Cargo.toml
programs/clear-wallet/client/src/: chains.rs  intent_json.rs
programs/clear-wallet/src/: lib.rs  tests.rs
programs/clear-wallet/src/chains/: bitcoin.rs  evm.rs  mod.rs  zcash.rs
programs/clear-wallet/src/instructions/: approve.rs  bind_dwallet.rs  cancel.rs  cleanup_proposal.rs  create_wallet.rs  execute.rs  ika_sign.rs  mod.rs
programs/clear-wallet/src/state/: ika_config.rs  intent.rs  mod.rs
programs/clear-wallet/src/utils/: definition.rs  ika_cpi.rs  message.rs
