[package]
name = "e2e-clear-msig-ika"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"
publish = false

[[bin]]
name = "e2e-clear-msig-ika"
path = "src/main.rs"

[dependencies]
clear-wallet = { path = "../programs/clear-wallet", features = ["client"] }
clear-wallet-client = { path = "../programs/clear-wallet/client" }

solana-sdk = "2.2"
solana-rpc-client = "2.2"
solana-address = { version = "2", features = ["curve25519"] }
solana-instruction = "3"
wincode = { version = "0.4", features = ["derive", "std"] }
quasar-lang = { git = "https://github.com/blueshift-gg/quasar" }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
bs58 = "0.5"

# gRPC + Ika types
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
ika-grpc = { path = "../../ika-pre-alpha/crates/ika-grpc" }
ika-dwallet-types = { path = "../../ika-pre-alpha/crates/ika-dwallet-types" }
bcs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
